--- a/customer-front-thymeleaf-app/src/main/resources/application.properties
+++ b/customer-front-thymeleaf-app/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8083
 spring.datasource.url=jdbc:h2:mem:customers-db
 spring.h2.console.enabled=true
 
+spring.security.oauth2.client.registration.google.clientId=294778775600-pi63tt3tep6tn58kanh7jeo9ovlk3j2r.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.provider.google.user-name-attribute=email
