--- a/customer-front-thymeleaf-app/src/main/resources/application.properties
+++ b/customer-front-thymeleaf-app/src/main/resources/application.properties
@@ -6,3 +6,19 @@ spring.h2.console.enabled=true
 spring.security.oauth2.client.registration.google.clientId=294778775600-pi63tt3tep6tn58kanh7jeo9ovlk3j2r.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.provider.google.user-name-attribute=email
+
+
+spring.security.oauth2.client.registration.github.clientId=88195d0ca4e12ef9a211
+spring.security.oauth2.client.registration.github.client-secret=2706673800b8811ff728a4a4d4a61de083d22e28
+spring.security.oauth2.client.provider.github.user-name-attribute=login
+
+spring.security.oauth2.client.registration.keycloak.client-name=keycloak
+spring.security.oauth2.client.registration.keycloak.client-id=oauth2-customer-client
+spring.security.oauth2.client.registration.keycloak.client-secret=2706673800b8811ff728a4a4d4a61de083d22e28
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,offline_access
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8090/login/oauth2/code/oauth2-customer-client
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/oauth2-realm
+
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/ebank-realm
