--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.application.name=inventory-service
 server.port=8098
-spring.datasource.url=jdbc:h2:mem:products-db
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:products-db
+#spring.h2.console.enabled=true
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory-db?createDatabaseIfNotExist=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/oauth2-realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/oauth2-realm/protocol/openid-connect/certs
