--- a/customer-front-thymeleaf-app/src/main/resources/application.properties
+++ b/customer-front-thymeleaf-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=customer-app
-server.port=8083
+server.port=8090
 spring.datasource.url=jdbc:h2:mem:customers-db
 spring.h2.console.enabled=true
 
@@ -13,12 +13,16 @@ spring.security.oauth2.client.registration.github.client-secret=2706673800b8811f
 spring.security.oauth2.client.provider.github.user-name-attribute=login
 
 spring.security.oauth2.client.registration.keycloak.client-name=keycloak
-spring.security.oauth2.client.registration.keycloak.client-id=oauth2-customer-client
-spring.security.oauth2.client.registration.keycloak.client-secret=trpKl5a1fcOAZg19OUCeCPLBI87yjpDD
+spring.security.oauth2.client.registration.keycloak.client-id=glsid-customer-client
+spring.security.oauth2.client.registration.keycloak.client-secret=Un5dasnQATYD3T5F0kQzWIljq2nGo3ha
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,offline_access
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8083/login/oauth2/code/oauth2-customer-client
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/oauth2-realm
+spring.security.oauth2.client.registration.keycloak.redirect-uri=${KEYCLOAK_REDIRECT_URI:http://localhost:8090/login/oauth2/code/glsid-customer-client}
+spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/glsid-realm}
 
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/ebank-realm
+spring.security.oauth2.client.provider.keycloak.authorization-uri=${KEYCLOAK_AUTH:http://localhost:8080/realms/glsid-realm/protocol/openid-connect/auth}
+spring.security.oauth2.client.provider.keycloak.token-uri=${KEYCLOAK_AUTH_TOKEN:http://localhost:8080/realms/glsid-realm/protocol/openid-connect/token}
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=${JWT_JWK_SET_URI:http://localhost:8080/realms/glsid-realm/protocol/openid-connect/certs}
+inventory.service.base.uri=${INVENTORY_SERVICE_BASE_URI:http://localhost:8098}
