--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,80 @@ services:
       PMA_HOST: mysql-db-inventory
       PMA_PORT: 3306
       PMA_ARBITRARY: 1 #this is to allow the user to enter any host name (localhost is the host name for the mysql container)
+  enset-inventory-service:
+      build: ./inventory-service
+      container_name: enset-inventory-service
+      ports:
+        - '8098:8098'
+      expose:
+        - '8098'
+      restart: always
+      depends_on:
+          - mysql-db-inventory
+      environment:
+          - DB_URL=jdbc:mysql://mysql-db-inventory:3306/inventory-db
+  enset-customer-service-thymeleaf:
+    build: ./customer-front-thymeleaf-app
+    container_name: enset-customer-service-thymeleaf
+    ports:
+      - '8090:8090'
+    expose:
+      - '8090'
+    restart: always
+    environment:
+      - KEYCLOAK_REDIRECT_URI=http://localhost:8090/login/oauth2/code/glsid-customer-client
+      - KEYCLOAK_ISSUER_URI=http://keycloak:8080/realms/glsid-realm
+      - KEYCLOAK_AUTH=http://localhost:8080/realms/glsid-realm/protocol/openid-connect/auth
+      - KEYCLOAK_AUTH_TOKEN=http://keycloak:8080/realms/glsid-realm/protocol/openid-connect/token
+      - JWT_JWK_SET_URI=http://keycloak:8080/realms/glsid-realm/protocol/openid-connect/certs
+      - INVENTORY_SERVICE_BASE_URI=http://enset-inventory-service:8098
+  postgres-service:
+    image: postgres
+    container_name: postgres-service
+    volumes:
+      - postgres_data_enset:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: keycloak_enset_db
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: k1234
+    ports:
+      - '5432:5432'
+    expose:
+      - '5432'
+    healthcheck:
+      test: "exit 0"
+  pgadmin4:
+    image: dpage/pgadmin4
+    container_name: pgadmin4
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: med@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: azer
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    environment:
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres-service:5432/keycloak_enset_db
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: k1234
+      KEYCLOAK_ADMIN: admin
+      KC_HTTP_ENABLED: "true"
+      KC_HOSTNAME_STRICT_HTTPS: "false"
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command:
+      - start-dev
+    restart: always
+    ports:
+      - '8080:8080'
+    expose:
+      - '8080'
+    depends_on:
+      - postgres-service
 volumes:
   mysql_data:
+  postgres_data_enset:
+  pgadmin_data:
