--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8098
 #spring.h2.console.enabled=true
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory-db?createDatabaseIfNotExist=true
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/inventory-db?createDatabaseIfNotExist=true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
